--- a/static/index.html
+++ b/static/index.html
@@ -658,6 +658,10 @@
                                         <span class="label">创建时间:</span>
                                         <span id="detail-created" class="value"></span>
                                     </div>
+                                    <div class="detail-row" id="detail-submitter-row" style="display: none;">
+                                        <span class="label">提交者:</span>
+                                        <span id="detail-submitter" class="value"></span>
+                                    </div>
                                     <div class="detail-row" id="detail-error-row" style="display: none;">
                                         <span class="label">错误:</span>
                                         <span id="detail-error" class="value error"></span>
